# Pytendente

./: .gitignore  LICENSE  README.md  action_routes.py  add_knowledge.py  alembic.ini  brain.py  dados.db  demo.py  git_api.py  main.py  me_info.py  models.py  pyproject.toml  regex.py  schemas.py  tickets.py
alembic/: env.py
alembic/versions/: 2906e7880ae4_initial_migration.py  c2d44109128b_initial_migration.py
api/: models.py
api/alembic/versions/: f88e85d35b06_banco_da_api.py
backend/: .dockerignore  Dockerfile  action_routes.py  demo.py  demo_model.pkl  me_info.py  me_model.pkl  models.py  pyproject.toml  tickets.py
backend/alembic/: env.py
backend/alembic/versions/: 4b35ab7fe69b_data.py
bot/: add_knowledge.py  alembic.ini  me_model.pkl  models.py  trained_model_2.pkl
bot/alembic/: env.py
bot/alembic/versions/: 170b00bb5dfd_banco_do_bot.py  d8b617484c60_knowledge.py
frontend/: app.py  chats.py  infos.py  secrets.toml  tickets.py
interface/: app.py  chat_demo.py  chat_me.py  chats.py  git_api.py  infos.py  stream.py  style.css  tickets.py
