[project]
name = "pytendente"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.2",
    "fastapi>=0.128.0",
    "fuzzywuzzy>=0.18.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "python-jose>=3.5.0",
    "python-levenshtein>=0.27.3",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
