[project]
name = "pytendente"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.2",
    "altair==4.2.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fuzzywuzzy>=0.18.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "python-jose>=3.5.0",
    "python-levenshtein>=0.27.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.0",
    "sqlalchemy>=2.0.46",
    "standard-imghdr>=3.13.0",
    "streamlit>=1.30.0",
    "uvicorn>=0.40.0",
]
